tests/should_fail/option_must_use_string_get.nv
module main

// SHOULD FAIL: String::get returns Option(Char) — bare use is discard
let s = "hello"
s.get(0)
println("should not reach")
